# initia

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json
src/: csv.hpp  fns.hpp  layer.hpp  main.cpp  mtx.hpp  net.hpp
